--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -28,7 +28,7 @@ pipeline{
                 
                 script{
                     docker.withRegistry('', 'dockerhub-auth') {
-                        def customImage = docker.build("xeng/atm-route")
+                        def customImage = docker.build("xeng/simple-route")
                         /* Push the container to the custom Registry */
                         customImage.push()
                     }
