--- a/default.conf
+++ b/default.conf
@@ -6,7 +6,8 @@ server {
         location / {
             root   /usr/share/nginx/html;
             index  index.html index.htm;
-                try_files $uri /index.html;
+            try_files $uri /index.html;
+            rewrite  ^/ui/?(.*) /$1 break;
         }
 
         error_page   500 502 503 504  /50x.html;
