--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,6 @@ version: "3.8"
 services:
   reactjs-ui:
     container_name: "reactjs-ui-cont"
-    image: xeng/reactjs-VV1:1.2.3
+    image: registry.e-crops.co/frontend:1
     ports:
       - "3001:80"
